--- a/GroversAlgorithm/GroversAlgorithm.ipynb
+++ b/GroversAlgorithm/GroversAlgorithm.ipynb
@@ -124,14 +124,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T12_Oracle_AlternatingBits \n",
     "\n",
     "operation Oracle_AlternatingBits (queryRegister : Qubit[], target : Qubit) : Unit is Adj {\n",
-    "    // ...\n",
+    "    within {\n",
+    "        for i in 0..Length(queryRegister) - 1 {\n",
+    "            if (i % 2 == 1) {\n",
+    "                X(queryRegister[i]);\n",
+    "            }\n",
+    "        }\n",
+    "    } apply {\n",
+    "        Controlled X(queryRegister, target);\n",
+    "    }\n",
     "}"
    ]
   },
@@ -163,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +193,7 @@
        "Success!"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,14 +236,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "[\"OracleConverterImpl\"]",
+      "text/html": [
+       "<ul><li>OracleConverterImpl</li></ul>"
+      ],
+      "text/plain": [
+       "OracleConverterImpl"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operation OracleConverterImpl(markingOracle : ((Qubit[], Qubit) => Unit is Adj), register : Qubit[]) : Unit is Adj {\n",
+    "    use target = Qubit();\n",
+    "    within {\n",
+    "        X(target);\n",
+    "        H(target);\n",
+    "    } apply {\n",
+    "        markingOracle(register, target);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T14_OracleConverter \n",
     "\n",
     "function OracleConverter (markingOracle : ((Qubit[], Qubit) => Unit is Adj)) : (Qubit[] => Unit is Adj) {\n",
-    "    // ...\n",
+    "    return OracleConverterImpl(markingOracle, _);\n",
     "}"
    ]
   },
@@ -250,14 +314,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T21_HadamardTransform \n",
     "\n",
     "operation HadamardTransform (register : Qubit[]) : Unit is Adj {\n",
-    "    // ...\n",
+    "    ApplyToEachA(H, register);\n",
     "}"
    ]
   },
@@ -309,14 +385,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T22_ConditionalPhaseFlip \n",
     "\n",
+    "open Microsoft.Quantum.Arrays;\n",
+    "open Microsoft.Quantum.Math;\n",
+    "\n",
     "operation ConditionalPhaseFlip (register : Qubit[]) : Unit is Adj {\n",
-    "    // ...\n",
+    "    within {\n",
+    "        for i in 0..Length(register) - 1 {\n",
+    "            X(register[i]);\n",
+    "        }\n",
+    "    } apply {\n",
+    "        Controlled Z(Most(register), Tail(register));\n",
+    "    }\n",
     "}"
    ]
   },
@@ -350,14 +447,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T23_GroverIteration \n",
     "\n",
     "operation GroverIteration (register : Qubit[], oracle : (Qubit[] => Unit is Adj)) : Unit is Adj {\n",
-    "    // ...\n",
+    "    oracle(register);\n",
+    "    ApplyToEachA(H, register);\n",
+    "    ConditionalPhaseFlip(register);\n",
+    "    ApplyToEachA(H, register);\n",
     "}"
    ]
   },
@@ -390,14 +502,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T31_GroversSearch \n",
     "\n",
     "operation GroversSearch (register : Qubit[], oracle : ((Qubit[], Qubit) => Unit is Adj), iterations : Int) : Unit {\n",
-    "    // ...\n",
+    "    let phaseFlip = OracleConverter(oracle);\n",
+    "    HadamardTransform(register);\n",
+    "    for i in 1..iterations {\n",
+    "        GroverIteration(register, phaseFlip);\n",
+    "    }\n",
     "}"
    ]
   },
